--- a/src/form/Form.scss
+++ b/src/form/Form.scss
@@ -1,10 +1,15 @@
 form.card {
   .card-footer {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row-reverse;
+    }
     .alert {
       flex-grow: 1;
-      margin-right: 1rem;
+      margin-top: 1rem;
       margin-bottom: 0;
     }
     button {
