--- a/src/checking-account/elements/Styles.scss
+++ b/src/checking-account/elements/Styles.scss
@@ -5,4 +5,13 @@ main.checking-account {
   .card {
     grid-column-end: span 4;
   }
+
+  table.spendings {
+    td:first-child {
+      width: 10%;
+    }
+    td:last-child {
+      text-align: right;
+    }
+  }
 }
