--- a/src/dashboard/ListCheckingAccounts.scss
+++ b/src/dashboard/ListCheckingAccounts.scss
@@ -3,5 +3,10 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    > :nth-child(2) {
+      margin-left: 1rem;
+      margin-right: 1rem;
+      flex-grow: 1;
+    }
   }
 }
