--- a/src/dashboard/ListCheckingAccounts.scss
+++ b/src/dashboard/ListCheckingAccounts.scss
@@ -9,4 +9,12 @@
       flex-grow: 1;
     }
   }
+  .card-footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    > :first-child {
+      flex-grow: 1;
+    }
+  }
 }
