--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -12,6 +12,14 @@ form {
       flex-grow: 0;
     }
   }
+  .card-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      flex-grow: 0;
+    }
+  }
 }
 
 .card-title {
