--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -3,21 +3,54 @@ form {
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
+
     .alert {
       flex-grow: 1;
       margin-right: 1rem;
       margin-bottom: 0;
     }
+
     button {
       flex-grow: 0;
     }
   }
+
   .card-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     button {
       flex-grow: 0;
+    }
+  }
+
+  .form-group {
+    &.oneLine {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      label {
+        margin-bottom: 0;
+        white-space: nowrap;
+        margin-right: 0.5rem;
+      }
+
+      &.withValueSelector {
+        align-items: baseline;
+
+        input + .valueSelector {
+          margin-top: 0.25rem;
+        }
+      }
+    }
+  }
+
+  .valueSelector {
+    .btn-group {
+      margin-right: 0.25rem;
+      margin-bottom: 0.25rem;
     }
   }
 }
@@ -33,6 +66,7 @@ form {
 .card-title {
   font-weight: bold;
   margin-bottom: 0;
+
   & + .card-subtitle {
     margin-top: 0.5rem;
   }
