--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -15,16 +15,6 @@ form {
     }
   }
 
-  .card-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    button {
-      flex-grow: 0;
-    }
-  }
-
   .form-group {
     &.oneLine {
       display: flex;
@@ -47,8 +37,20 @@ form {
   }
 }
 
-.card-footer {
+.card-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  button {
+    flex-grow: 0;
+  }
+}
+
+.card-footer,
+.card-header {
   nav {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -58,7 +60,6 @@ form {
 .card-title {
   font-weight: bold;
   margin-bottom: 0;
-
   & + .card-subtitle {
     margin-top: 0.5rem;
   }
@@ -71,4 +72,13 @@ form {
 
 .card-body > dl:last-child {
   margin-bottom: 0;
+}
+
+.money {
+  white-space: nowrap;
+  text-align: right;
+  .currency {
+    opacity: 0.5;
+    font-size: 80%;
+  }
 }
