--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -1,20 +1,4 @@
 form {
-  .card-footer {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: flex-start;
-
-    .alert {
-      flex-grow: 1;
-      margin-right: 1rem;
-      margin-bottom: 0;
-    }
-
-    button {
-      flex-grow: 0;
-    }
-  }
-
   .form-group {
     &.oneLine {
       display: flex;
@@ -37,29 +21,27 @@ form {
   }
 }
 
-.card-header {
+.card-header,
+.card-footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  .alert {
+    flex-grow: 1;
+    margin-right: 1rem;
+    margin-bottom: 0;
+  }
 
   button {
     flex-grow: 0;
   }
 }
 
-.card-footer,
-.card-header {
-  nav {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
-
 .card-title {
   font-weight: bold;
   margin-bottom: 0;
+
   & + .card-subtitle {
     margin-top: 0.5rem;
   }
@@ -77,6 +59,7 @@ form {
 .money {
   white-space: nowrap;
   text-align: right;
+
   .currency {
     opacity: 0.5;
     font-size: 80%;
