--- a/src/Accounts/Accounts.scss
+++ b/src/Accounts/Accounts.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .list-group-item {
   > a {
     display: block;
@@ -5,8 +7,12 @@
 }
 
 table.accounts {
-  tbody {
+  tbody,
+  tfoot {
     font-size: 80%;
+    @media (min-width: $mobile-breakpoint) {
+      font-size: 100%;
+    }
     .amount {
       text-align: right;
     }
