--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 form {
   .form-group {
     &.oneLine {
@@ -50,6 +52,9 @@ form {
 .card-subtitle {
   font-weight: 300;
   font-size: 85%;
+  @media (min-width: $mobile-breakpoint) {
+    font-size: 100%;
+  }
 }
 
 .card-body > dl:last-child {
@@ -63,5 +68,8 @@ form {
   .currency {
     opacity: 0.5;
     font-size: 80%;
+    @media (min-width: $mobile-breakpoint) {
+      font-size: 100%;
+    }
   }
 }
