--- a/src/util/date/FormatMoney.scss
+++ b/src/util/date/FormatMoney.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 span.money {
   white-space: nowrap;
   display: inline-block;
@@ -6,6 +8,10 @@ span.money {
   .minus {
     opacity: 0.5;
     font-size: 80%;
+
+    @media (min-width: $mobile-breakpoint) {
+      font-size: 100%;
+    }
   }
 
   &.income {
